# EvelentWalker

./: .gitignore  EvelentWalker.sln  MIGRATION_CPP_PLAN.md  README.md  Todo.txt  build.cmd  make_icon.ps1
EvelentWalker/: App.config  EvelentWalker.csproj  ExploreForm.Designer.cs  ExploreForm.cs  FodyWeavers.xml  MenuForm.Designer.cs  (+9 more)
EvelentWalker.ErrorReport/: EvelentWalker.ErrorReport.csproj  Program.cs  ReportForm.Designer.cs  ReportForm.cs
EvelentWalker.Gen9Converter/: EvelentWalker.Gen9Converter.csproj  Program.cs
EvelentWalker.ModManager/: EvelentWalker.ModManager.csproj  Mod.cs  ModManagerForm.Designer.cs  ModManagerForm.cs  Program.cs  SelectFolderForm.Designer.cs  SelectFolderForm.cs  SettingsFile.cs  SimpleKvpFile.cs
EvelentWalker.Peds/: EvelentWalker.Peds.csproj  Program.cs
EvelentWalker.RPFExplorer/: EvelentWalker.RPFExplorer.csproj  Program.cs
EvelentWalker.Shaders/: EvelentWalker.Shaders.vcxproj
EvelentWalker.Vehicles/: EvelentWalker.Vehicles.csproj  FodyWeavers.xml  Program.cs
EvelentWalker.WinForms/: FormUtils.cs  MenuStripFix.Designer.cs  MenuStripFix.cs  ProjectPanel.cs  PropertyGridFix.Designer.cs  PropertyGridFix.cs  QuaternionBox.Designer.cs  QuaternionBox.cs  ReadOnlyPropertyGrid.Designer.cs  ReadOnlyPropertyGrid.cs  TextBoxFix.Designer.cs  TextBoxFix.cs  TextBoxScrollSyncFix.Designer.cs  TextBoxScrollSyncFix.cs  ToolStripFix.Designer.cs  ToolStripFix.cs  ToolStripSplitButtonFix.Designer.cs  ToolStripSplitButtonFix.cs  ToolStripSpringTextBox.Designer.cs  ToolStripSpringTextBox.cs  TrackBarFix.cs  TreeViewFix.Designer.cs  TreeViewFix.cs
cpp/: CMakeLists.txt  build.cmd  build.ps1
cpp/app/: main.cpp
cpp/build-gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  EvelentWalkerCpp.slnx  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  evw_cli.vcxproj  evw_cli.vcxproj.filters  evw_core.vcxproj  evw_core.vcxproj.filters  evw_gui.vcxproj  evw_gui.vcxproj.filters  evw_tests.vcxproj  evw_tests.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters
cpp/core/include/evw/app/: explorer.h  render_mesh.h
cpp/core/include/evw/gamefiles/: aes.h  awc.h  bounds.h  cachedat.h  clip.h  data.h  ddsio.h  dictionaries.h  distantlights.h  dotnet_random.h  drawable.h  dxt_decode.h  frag.h  fxc.h  gamefile.h  geometry.h  gtacrypto.h  gtxd.h  gxt2.h  hashsearch.h  heightmap.h  inflate.h  jenk.h  meta.h  meta_xml.h  metatypes.h  model.h  mrf.h  navmesh.h  node.h  particle.h  pso.h  pso_xml.h  rbf.h  rbf_xml.h  records.h  rel.h  resource_data.h  rpf.h  rpf_manager.h  (+8 more)
cpp/core/include/evw/math/: math.h
cpp/core/src/app/: explorer.cpp  render_mesh.cpp
cpp/core/src/gamefiles/: aes.cpp  awc.cpp  bounds.cpp  cachedat.cpp  clip.cpp  data.cpp  ddsio.cpp  dictionaries.cpp  distantlights.cpp  dotnet_random.cpp  drawable.cpp  dxt_decode.cpp  frag.cpp  fxc.cpp  gamefile.cpp  geometry.cpp  gtacrypto.cpp  gtxd.cpp  gxt2.cpp  hashsearch.cpp  heightmap.cpp  inflate.cpp  jenk.cpp  meta.cpp  meta_xml.cpp  model.cpp  mrf.cpp  navmesh.cpp  node.cpp  particle.cpp  pso.cpp  pso_xml.cpp  rbf.cpp  rbf_xml.cpp  records.cpp  rel.cpp  resource_data.cpp  rpf.cpp  rpf_manager.cpp  sha1.cpp  (+6 more)
cpp/gui/: main.cpp  viewport.cpp  viewport.h
cpp/tests/: main.cpp
(+336 files in other folders)
